# FMEDA-tool

./: .env  .roomodes  README_COMPONENT_CALCULATION.md  README_FMEDA_ENGINE.md  README_VERIFY_FIT.md  index.html  package-lock.json  package.json  tailwind.config.js
config/: config.cjs
db/migrations/: 0001_init.sql
engine/: .env.example  Cargo.toml  Dockerfile
engine/.sqlx/: query-5e18bac2621f8c58618ae9640a5fbbbfe6efea53accdc254d19376f2b2642d84.json  query-ebe9803077ab4f0abcf984795b6abe0e68236bc0acb629ddd53b1a84aefc7428.json
engine/migrations/: 0002_add_fmed_tables.sql  0003_add_mission_profiles.sql  0004_add_component_hierarchy.sql
engine/src/: calc.rs  db.rs  errors.rs  lib.rs  main.rs  models.rs  routes.rs
engine/src/calc/: IEC62380.rs  mod.rs  sn29500.rs
migrations/: 20250929174159-create-project.js
models/: project.js
src/: App.tsx  main.tsx
src/components/: Dashboard.tsx  Layout.tsx  ProjectTabs.tsx  Sidebar.tsx
src/components/charts/: ComponentsBarChart.tsx  MetricsMatrix.tsx  ProjectPieChart.tsx
src/pages/: FTA.tsx  Home.tsx  NewProject.tsx
